Replaced setup.py with setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,49 @@
 [metadata]
+name = fbs-no-runtime
+# Also update fbs/_defaults/requirements/base.txt when you change this:
+version = "1.1.4"
+description = A cross-platform build system for Python
 description-file = README.md
+long_description = file: README.md
+long_description_content_type = text/markdown
+author = Michael Herrmann, James Clare
+url = https://github.com/Amulet-Team/fbs-no-runtime
+license = GPLv3 or later
+classifiers =
+    Development Status :: 5 - Production/Stable
+    Intended Audience :: Developers
+    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
+    Operating System :: OS Independent
+    Programming Language :: Python
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
+    Topic :: Software Development :: Libraries
+    Topic :: Software Development :: Libraries :: Python Modules
+platforms =
+    MacOS
+    Windows
+    Debian
+    Fedora
+    CentOS
+    Arch
+
+[options]
+include_package_data = True
+python_requires = >=3.5
+install_requires =
+    PyInstaller
+
+packages = find:
+
+[options.packages.find]
+include = fbs*
+
+[options.entry_points]
+console_scripts =
+    fbs = fbs.__main__:main
+
+[options.extras_require]
+licensing = rsa>=3.4.2
+sentry = sentry-sdk>=0.6.6
+upload = boto3
