--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = fbs-no-runtime
 # Also update fbs/_defaults/requirements/base.txt when you change this:
-version = "1.1.4"
+version = 1.1.4
 description = A cross-platform build system for Python
 description-file = README.md
 long_description = file: README.md
