Fixed main function name

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,7 +41,7 @@ include = fbs*
 
 [options.entry_points]
 console_scripts =
-    fbs = fbs.__main__:main
+    fbs = fbs.__main__:_main
 
 [options.extras_require]
 licensing = rsa>=3.4.2
